forgot the use flag...

--- a/resources/gcc_make.conf
+++ b/resources/gcc_make.conf
@@ -10,6 +10,8 @@ FFLAGS="${COMMON_FLAGS}"
 
 MAKEOPTS="-j4"
 
+USE="lto"
+
 # WARNING: Changing your CHOST is not something that should be done lightly.
 # Please consult https://wiki.gentoo.org/wiki/Changing_the_CHOST_variable before changing.
 CHOST="riscv64-unknown-linux-gnu"
