--- a/resources/clang_make.conf
+++ b/resources/clang_make.conf
@@ -2,15 +2,13 @@
 # built this stage.
 # Please consult /usr/share/portage/config/make.conf.example for a more
 # detailed example.
-COMMON_FLAGS="-mabi=lp64d -march=rv64imafdc_zicsr_zba_zbb -mcpu=sifive-u74 -mtune=sifive-7-series -O2 -flto=1 -pipe -fdiagnostics-color=always -Wno-unknown-warning-option"
+COMMON_FLAGS="-mabi=lp64d -march=rv64imafdc_zicsr_zba_zbb -mcpu=sifive-u74 -mtune=sifive-7-series -O2 -pipe -fdiagnostics-color=always -Wno-unknown-warning-option"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 
 MAKEOPTS="-j4"
-
-USE="lto"
 
 CC="clang"
 CPP="clang-cpp"
